correct res container style - min-width & text align

--- a/homework_03/styles/index.css
+++ b/homework_03/styles/index.css
@@ -112,7 +112,8 @@ input {
     background-color: var(--back-black);
     color: var(--light-color);
     min-height: 5rem;
-    min-width: 5rem;
+    min-width: 20rem;
+    text-align: center;
 }
 
 .btn {
